
05/07/2008 - 203400 Dr J A Gow
------------------------------

Applied patches from 'merKur' to enhance support in synchronization of 
contacts and resolve some timezone issues.

EVO->WM5:
- Note not being sync'ed,
  At least on my phone, the note should be in <C1:Body>, not in <C1:Rtf>
- If both "Business phone" and "Business fax" were defined, "Business
  phone" ended up in "Work Phone 2"
  This was due to usage of position() in the XSLT, while some elements
  were skipped. Instead filter by Type=WORK & Type=VOICE.
- PO Box was not being sync'ed
  It seems WM5 has no 'PostalBox' field. I appended this info in the
  'Street' field.
- Street in Evolution can be multi-line, but only 1st line was sync'ed.
  The rest of the lines appear in the 'ExtendedAddress' field.
  I appended this to the 'Street' field.

WM5->EVO:
- Photo was not being sync'ed.
  I added an 'Encoding' attribute which solves this.
- Phone updates were messed up.
  Added 'VOICE' Type attribute to the relevant ones.
- Timezone conversion problems.
  See my thread "SynCE AirSync->VCal Timezone conversion bug" in
  synce-users dated 1-Jul-2008. Patch attached here as well.


10/09/2008 - 163500 Mark Ellis
------------------------------

Add config setting to allow authorization to be handled by an external
process

Fix comment in syncengine.conf.xml, default is INTERNAL_GTK


22/10/2008 - 104500 Mark Ellis
------------------------------

Fixes to authorization framework, we were trying to connect while
authorization was pending.

25/10/2008 - 195000 Dr J A Gow
------------------------------

Fixed handling of birthdays in contacts for OS0.2x. Birthdays will now sync in
both directions (bug in XSLT transforms: 'Content' elements missing)

Also fixed anniversaries Opensync->Airsync. However anniversaries
Airsync->Opensymc still do not work. The XML is correct and a bug in Opensync
is suspected.

29/10/2008 - 165500 Mark Ellis
------------------------------
Minor update for change in pyrapi2.RAPIError
